--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- CSS FILES -->
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/queries.css" rel="stylesheet" />
+    <link href="css/general.css" rel="stylesheet" />
 
     <!-- SCRIPTS -->
     <script src="js/script.js" defer></script>
@@ -27,6 +28,37 @@
             <li><a class="nav-link" href="#contact-me">Contact</a></li>
             <li><a class="nav-link" href="#section-skills">Skills</a></li>
           </ul>
+
+          <!-- <button class="btn-mobile-nav">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 icon"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 icon"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M6 18L18 6M6 6l12 12"
+              />
+            </svg>
+          </button> -->
         </nav>
       </header>
 
@@ -185,7 +217,7 @@
               </div>
             </div>
             <div class="project-tile">
-              <p class="project-name">What to Eat &dash; Food Picker</p>
+              <p class="project-name">What to Eat?</p>
               <div class="project-box grid grid--2-cols">
                 <a
                   href="https://purnimakumarr.github.io/what_to_eat/"
