--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <title>Purnima Kumar &dash; Front End Developer</title>
 
     <!-- CSS FILES -->
+    <link href="css/general.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/queries.css" rel="stylesheet" />
-    <link href="css/general.css" rel="stylesheet" />
 
     <!-- SCRIPTS -->
     <script src="js/script.js" defer></script>
   </head>
   <body>
     <main>
-      <header class="header">
+      <header class="header mobile-nav">
         <nav class="main-navbar">
           <ul class="navbar-list">
             <li><a class="nav-link" href="#welcome-section">About</a></li>
@@ -28,38 +28,37 @@
             <li><a class="nav-link" href="#contact-me">Contact</a></li>
             <li><a class="nav-link" href="#section-skills">Skills</a></li>
           </ul>
-
-          <!-- <button class="btn-mobile-nav">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6 icon"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h16"
-              />
-            </svg>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6 icon"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M6 18L18 6M6 6l12 12"
-              />
-            </svg>
-          </button> -->
         </nav>
+        <button class="btn-mobile-nav">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 icon icon-menu icon-open"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 icon icon-cross"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
       </header>
 
       <!--  WELCOME SECTION  -->
