--- a/index.html
+++ b/index.html
@@ -310,7 +310,15 @@
             >Social Links &rarr;</a
           >
         </div>
-        <p>Made with &hearts; by Purnima Kumar</p>
+        <p>
+          &copy; designed and build by
+          <span
+            ><a class="link-2" href="https://purnimakumarr.github.io"
+              >Purnima Kumar</a
+            ></span
+          >
+          &hearts;
+        </p>
       </footer>
     </main>
   </body>
