--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       name="description"
       content="Purnima Kumar is a self &dash; taught Front End Developer and school &dash; taught C++ programmer."
     />
+
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" herf="" />
+
     <title>Purnima Kumar &dash; Front End Developer</title>
 
     <!-- CSS FILES -->
@@ -211,8 +216,16 @@
             <div class="project-tile">
               <p class="project-name">My Portfolio</p>
               <div class="project-box grid grid--2-cols">
-                <a class="link-2 project-links" href="#">Visit site</a>
-                <a href="#" class="link-2 project-links">View code</a>
+                <a
+                  class="link-2 project-links"
+                  href="https://purnimakumarr.github.io"
+                  >Visit site</a
+                >
+                <a
+                  href="https://github.com/purnimakumarr/purnimakumarr.github.io"
+                  class="link-2 project-links"
+                  >View code</a
+                >
               </div>
             </div>
             <div class="project-tile">
