--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
           <p class="desc desc--long">
             Apart from coding I like reading books and sometimes, writing. My
             favorite genres are Crime fiction, Memoirs, Classics, Literary
-            fiction. The last book I read was Tuesdays by Morrie by Mitch Albom.
+            fiction. The last book I read was Tuesdays with Morrie by Mitch
+            Albom.
           </p>
         </div>
       </section>
