--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
             <button class="btn btn--long">Long</button>
           </div>
           <p class="desc desc--short desc-show">
-            Hey, I'm Purnima Kumar 😃. I'm a Front End Developer from Delhi,
-            India. I'm currently pursuing BSc.(Hons.) Computer Science from
-            University of Delhi. I build websites with a major focus on
-            accessibility, responsiveness and pleasing aesthetics. I recently
-            completed a course to learn Responsive Web Development using HTML
-            and CSS. You can check code for all the projects I build during that
-            time on
+            Hey, I'm Purnima Kumar. I'm a Front End Developer from Delhi, India.
+            I'm currently pursuing BSc.(Hons.) Computer Science from University
+            of Delhi. I build websites with a major focus on accessibility,
+            responsiveness and pleasing aesthetics. I recently completed a
+            course to learn Responsive Web Development using HTML and CSS. You
+            can check code for all the projects I build during that time on
             <span
               ><a
                 class="link-2"
@@ -312,26 +311,25 @@
 
       <!-- FOOTER -->
       <footer id="contact-me">
-        <p>Tell me about your job opportunity or just say hi 😊,</p>
+        <p>Tell me about your job opportunity or just say hi,</p>
         <div class="contact-box grid grid--2-cols">
           <a
             class="link"
             target="_blank"
             href="mailto:purnimakumar2021@gmail.com"
-            >Mail me 💌</a
+            >Mail me</a
           >
           <a class="link" target="_blank" href="https://linktr.ee/purnimakumar"
             >Social Links &rarr;</a
           >
         </div>
         <p>
-          &copy; designed and build by
+          &copy; <span class="current-year">2021</span>
           <span
-            ><a class="link-2" href="https://purnimakumarr.github.io"
+            ><a class="portfolio-link" href="https://purnimakumarr.github.io"
               >Purnima Kumar</a
             ></span
           >
-          &hearts;
         </p>
       </footer>
     </main>
