--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
   <body>
     <main>
       <header class="header mobile-nav">
+        <a class="logo" href="#">
+          <img
+            class="my-photo"
+            src="img/purnimakumar.jpg"
+            alt="Purnima Kumar"
+          />
+          <span>Purnima Kumar</span>
+        </a>
         <nav class="main-navbar">
-          <a class="logo" href="https://purnimakumarr.github.io">
-            <img
-              class="my-photo"
-              src="img/purnimakumar.jpg"
-              alt="Purnima Kumar"
-            />
-            <span>Purnima Kumar</span>
-          </a>
           <ul class="navbar-list">
             <li><a class="nav-link" href="#about-section">About</a></li>
             <li><a class="nav-link" href="#profile-section">Profile</a></li>
@@ -95,7 +95,7 @@
       </header>
 
       <!--  WELCOME SECTION  -->
-      <section id="welcome-secrion" class="welcome">
+      <section id="welcome-section" class="welcome">
         <div class="container">
           <div class="welcome-main">
             <p class="subheading highlight-text">Purnima Kumar</p>
@@ -152,8 +152,8 @@
             <h3 class="heading-secondary">Tech Stack</h3>
             <ul>
               <li>HTML</li>
-              <li>CSS</li>
               <li>JavaScript</li>
+              <li>CSS</li>
               <li>C++</li>
             </ul>
           </div>
@@ -163,7 +163,6 @@
               <li>VSCode</li>
               <li>Git</li>
               <li>GitHub</li>
-              <li>Sublime Text</li>
             </ul>
           </div>
           <div class="certificates">
@@ -173,21 +172,31 @@
                 <a
                   class="link-2"
                   href="https://drive.google.com/file/d/1c_swmT8IygHG4HYz_XG3bTKKs5Ll2Rek/view"
-                  >Responsive Web development using HTML and CSS at Udemy</a
+                  >Responsive Web development using HTML &amp; CSS Certificate
+                  from Udemy</a
                 >
               </li>
               <li>
                 <a
                   class="link-2"
                   href="https://www.freecodecamp.org/certification/purnimakumar/responsive-web-design"
-                  >Responsive Web Design at FreeCodeCamp</a
+                  >Responsive Web Design Certificate from FreeCodeCamp</a
                 >
               </li>
               <li>
                 <a
                   class="link-2"
                   href="https://www.freecodecamp.org/certification/purnimakumar/javascript-algorithms-and-data-structures"
-                  >JavaScript Algorithms and Data Strucutres at FreeCodeCamp</a
+                  >JavaScript Algorithms &amp; Data Strucutres Certificate from
+                  FreeCodeCamp</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-2"
+                  href="https://www.freecodecamp.org/certification/purnimakumar/front-end-development-libraries"
+                  >Front End Development Libraries Certificate from
+                  FreeCodeCamp</a
                 >
               </li>
             </ul>
@@ -257,7 +266,7 @@
               </div>
             </div>
           </div>
-          <div class="project-wrapper container">
+          <div class="project-wrapper">
             <p class="project-subheading">An Online Portfolio Website</p>
             <h3 class="project-title">2. Technical Portfolio</h3>
             <div class="grid grid--2-cols">
@@ -280,7 +289,7 @@
                   >
                 </div>
               </div>
-              <div class="project-images">
+              <div class="project-images images-portfolio">
                 <img
                   class="project-img img--1"
                   src="img/portfolio-snapshot-1.png"
@@ -318,7 +327,7 @@
       <!-- Contact SECTION -->
       <section class="contact" id="contact-section">
         <h2 class="heading-primary container">Get in touch</h2>
-        <p class="container contact-text container">
+        <p class="container contact-text">
           Available for freelance, part-time or full-time job opportunities,
           collaborations or other fun stuff. If you're interested in discussing
           a project, making something great together or simply a chat get in
