--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </section>
 
       <!-- PROJECTS SECTION -->
-      <section id="projects" class="section-projects">
+      <section id="projects-section" class="projects">
         <h2 class="heading-primary container">Projects</h2>
         <div class="container">
           <div class="project-wrapper">
