--- a/index.html
+++ b/index.html
@@ -298,19 +298,19 @@
                 <div class="img-mobile">
                   <img
                     class="project-img img--2"
-                    src="img/omnifood-snapshot-2.jpg"
+                    src="img/portfolio-snapshot-2.jpg"
                     alt="Omnifood website in
             mobile view."
                   />
                   <img
                     class="project-img img--4"
-                    src="img/omnifood-snapshot-4.jpg"
+                    src="img/portfolio-snapshot-3.jpg"
                     alt="Testimonial section of
                 Omnifood website in mobile view."
                   />
                   <img
                     class="project-img img--3"
-                    src="img/omnifood-snapshot-3.jpg"
+                    src="img/portfolio-snapshot-4.jpg"
                     alt="Image gallery of Omnifood website in mobile view."
                   />
                 </div>
